fixed overflow in ui

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 }
 html, body {
   max-width: 100vw !important;
-  height: 100% !important;
+  max-height: calc(100vh) !important;
 }
 body::-webkit-scrollbar {
   width: 0.7rem;
